--- a/sales/src/main/resources/application.properties
+++ b/sales/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name = sales-service
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url = jdbc:mysql://localhost:3306/ventas?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/ecommerce-ventas?serverTimezone=UTC
 spring.datasource.username = admin
 spring.datasource.password = admin
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
